src/objects/mkto_si__WebActivityCache__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__AccountLinkName__c</fullName>
        <label>AccountLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__AccountLink__c</fullName>
        <label>AccountLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WebActivityCache</relationshipLabel>
        <relationshipName>WebActivityCache</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__ActivityDT__c</fullName>
        <label>ActivityDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactLinkName__c</fullName>
        <label>ContactLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactLink__c</fullName>
        <label>ContactLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WebActivityCache</relationshipLabel>
        <relationshipName>WebActivityCache</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Id__c</fullName>
        <label>Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>WebActivityCache</relationshipLabel>
        <relationshipName>WebActivityCache</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>WebActivityCache</relationshipLabel>
        <relationshipName>WebActivityCache</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__RowNum__c</fullName>
        <label>RowNum</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__SActivityDT__c</fullName>
        <label>SActivityDT</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__SearchLinkName__c</fullName>
        <label>SearchLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__SearchLink__c</fullName>
        <label>SearchLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__TotalCount__c</fullName>
        <label>TotalCount</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__WPageLinkName__c</fullName>
        <label>WPageLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__WPageLink__c</fullName>
        <label>WPageLink</label>
        <type>Url</type>
    </fields>
    <label>WebActivityCache</label>
    <nameField>
        <label>WebActivityCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebActivityCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>